[tool.poetry]
name = "blogwebsite"
version = "0.1.0"
description = ""
authors = ["paulmurdoch19 <80228075+paulmurdoch19@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
flask = "^2.3.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
